--- a/src/SASS/App.scss
+++ b/src/SASS/App.scss
@@ -25,3 +25,6 @@
 
 // import stepper section style
 @import '../Components/HotelDetails/StepperSection/StepperSection.scss';
+
+// import host experience page style
+@import '../Components/HostExperience/HostExperience.scss';
